Can assign Null to optional properties

--- a/Silverlight.DataForm.UIHint/Silverlight.DataForm.UIHint.csproj
+++ b/Silverlight.DataForm.UIHint/Silverlight.DataForm.UIHint.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Core\BindingExpressionParser.cs" />
     <Compile Include="Core\ControlParameterBinder.cs" />
     <Compile Include="GenerateControlBase.cs" />
+    <Compile Include="NullableItemConverter.cs" />
     <Compile Include="Use.cs" />
     <Compile Include="GenerateComboBox.cs" />
     <Compile Include="IGenerateControl.cs" />
